[package]
name = "rooms-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "2.1.4", features = ["mysql", "r2d2", "chrono"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.25"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
actix = "0.13.0"
actix-cors = "0.7"